--- a/views/plugin-front.html
+++ b/views/plugin-front.html
@@ -192,25 +192,25 @@
                            <div id="timer"></div>
                            <i class="fa fa-spinner fa-pulse fa-3x fa-fw margin-bottom" style="margin-left : 80px;" id="call-going"></i>
                 </div>    
-               </div>
+            </div>
             <div class="col-md-3" style="vertical-align: top;">
                 <div class="row" id="chat-space" style="">
                 <div id="chat-plus">
                     <span id="contact"></span>
                     <div class="row thumbnail shadow-depth-4" id="chat-head" style="margin-bottom : 0px;">
-                            <div class="col-xs-2">
-                                <a class="btn icon" href="#"><span class= "glyphicon glyphicon-earphone media-icon " id="audio-call"></span></a>
-                            </div>
-                            <div class="col-xs-2"  id="video-command">
-                                <a class="btn icon" id="video-call"><span class="glyphicon glyphicon-facetime-video media-icon" ></span></a>
-                            </div>
-                         <div class="col-xs-2"  id="chat-icon" style="display : none;">
-                                <i class="fa fa-weixin" aria-hidden="true"   style="color : orange;"></i>
-                            </div>
-                             
-                            <div class="col-xs-1 pull-right">
-                                <a href="#" id="minus"><span class="glyphicon glyphicon-minus" ></span></a>
-                            </div>
+                        <button class="btn icon" href="#" style="background : #fafcfe;"><span class= "glyphicon glyphicon-earphone media-icon " id="audio-call"></span></button>        
+                        <button class="btn icon" id="video-call" style="background : #fafcfe;">
+                            <span class="glyphicon glyphicon-facetime-video media-icon"></span>
+                        </button> 
+                        <button class="btn icon" href="" id="screenSharing" style="background : #fafcfe;">
+                         <span class="fa fa-desktop" aria-hidden="true"></span>
+                        </button>
+                        <span class="col-xs-1"  id="chat-icon" style="display : none;">
+                            <i class="fa fa-weixin" aria-hidden="true"   style="color : orange;"></i>
+                        </span>
+                        <div class="col-xs-1 pull-right">
+                            <a href="#" id="minus"><span class="glyphicon glyphicon-minus" ></span></a>
+                        </div>
                     </div>
                     <div class="row"  id="chat-body" style="">
                         <div class="messages"  style="border-bottom : solid 1px;">
@@ -278,7 +278,7 @@
                      imClient.sendMessage(destId, message);
                      if( message!='null' && message != '$Ack_Accept'){
                          $('#chat-messages').append('<li class="bubbledLeft">'+message+'</li>');
-                         $('#chat-messages').append('<li class="textLeft" style="float : right; font-size : 10px; list-style : none;">'+
+                         $('#chat-messages').append('<li class="textLeft" style="float : right; font-size : 10px; list-style : none; display : none;">'+
                                                 getHeure(new Date())+'</li>');
                          $('#chat-messages').animate({scrollTop: $('#chat-messages')[0].scrollHeight},2000);    
                      }
@@ -299,7 +299,7 @@
                 } else{
                      startIM(e.detail.senderId);
                      $('#chat-messages').append('<li class="bubbledRight" >'+e.detail.message+'</li>'+                                    
-                                            '<span class="textRight" style="float : left; font-size : 10px; list-style : none;">'+
+                                            '<span class="textRight" style="float : left; font-size : 10px; list-style : none; display : none;">'+
                                             getHeure(e.detail.time)+'</span>'); 
                      ion.sound.play("facebook");
                  $('#chat-icon').css({'display': 'block'});
@@ -316,21 +316,29 @@
                  date =  e.detail.time.getDate()+"/"+(e.detail.time.getMonth()+1)+"/"+e.detail.time.getFullYear();
                  $('#date').css({'display' : 'block'});
                  $('#date').html(date);
-                 listId = e.detail.connectedUsersListWithStatus;
-                 if(listId.length == 0){
+                     listId = e.detail.connectedUsersListWithStatus;
+                     if(listId.length == 0){
                      $('#available').html('Nos agents ne sont pas disponibles.');
-                 }
+                     }
                  else {
                     $('#available').html('Nous sommes disponibles pour vous aider.');   
                  }
+                 setInterval( function(){
                  for(var i=0; i<listId.length; i++){
                          if( apiCC.session.apiCCId != listId[i].userId && listId[i].group != 'V' && listId[i].group !='undefined'){
-                                 if ($.inArray(listId[i].userId, lastUsers)== -1){
+                                 if ($.inArray(listId[i].userId, lastUsers)== -1 && listId[i].userId != 'undefined'  && e.detail.state == 'online'){
                                      lastUsers.push(listId[i].userId);
-                                     $('#contacts').append('<tr><td class="glyphicon glyphicon-user"></td>'+'<td class="btn btn-success agent">'+listId[i].userId+'</td></tr>');
+                                    if( listId[i].callState == 'no_Call'){
+                                        $('#contacts').append('<tr id='+listId[i].userId+'><td class="glyphicon glyphicon-user"></td>'+'<td class="btn btn-success agent">'+listId[i].userId+'</td></tr>');
+                                    } else {
+                                         $('#contacts').append('<tr id='+listId[i].userId+'><td class="glyphicon glyphicon-user"></td>'+'<td class="btn btn-danger agent">'+listId[i].userId+'</td></tr>');
+                                    }   
                                  }
                          }
                  }
+             }, 3000);
+             lastUsers = [];
+                 $('#contacts').empty();
              }
              function addStreamInDiv(stream, callType, divId, mediaEltId, style, muted) {
                 var mediaElt = null,
@@ -399,9 +407,11 @@
                  $('#audio').css({'display': 'none'});
                 ion.sound.stop("iphone");
                 ion.sound.play("hangup");
+                $('#video-call').attr('disabled', false);
+                $('#audio-call').attr('disabled', false);
             }
              function incomingCallHandler(e) {
-                $("#hangup").attr("disabled", true).val("Hangup");
+                $("#hangup").attr("disabled", true).val("Raccrocher");
                 $('#menu').show('explode');
                 $("#accept").attr("disabled", false).val("Accepter");
                 $("#refuse").attr("disabled", false).val("Refuser");
@@ -410,14 +420,21 @@
                  //Accept-Refuse
                 incomingCallId = e.detail.callId;
                  callerId = e.detail.callerId;
+                 if(e.detail.callType == 'media'){
+                       ion.sound.play("iphone");
+                 }
                  if(e.detail.callType == 'audio'){
                      callType = e.detail.callType;
                      $('#audio').css({'display': 'block'});
                      $('#hangup-audio').css({'display': 'none'});
-                      // webRTCClient.addStreamInDiv(e.detail.stream, e.detail.callType, "audio", 'audioElt-' + e.detail.callId,
-                               //{width : "640px", height : "480px"}, true);
                  }
-                   ion.sound.play("iphone");
+                 
+                  if(e.detail.callType == 'screenSharing'){
+                     $("#hangup").attr('disabled', false).val('Arrêter le partage');
+                     $('#accept').css({'display' : 'none'});
+                     $('#refuse').css({'display' : 'none'});
+                     $('#menu').show('explode');
+                 }
             }
              function userMediaSuccessHandler(e) {
                 console.log("userMediaSuccessHandler e.detail.callId :" + e.detail.callId);
@@ -445,6 +462,9 @@
                 webRTCClient.addStreamInDiv(e.detail.stream, e.detail.callType, "remote", 'remoteElt-' + e.detail.callId,
                                {width : "640px", height : "480px"}, false);
             }
+                function desktopCaptureHandler(e) {
+                console.log("e.detail.event :" + e.detail.event);
+            }
          
              function sessionReadyHandler(e){
                     apiRTC.addEventListener("updatePresence", receiveInfo);
@@ -454,6 +474,7 @@
                 apiRTC.addEventListener("userMediaError", userMediaErrorHandler);
                 apiRTC.addEventListener("hangup", hangupHandler);
                 apiRTC.addEventListener("remoteStreamAdded", remoteStreamAddedHandler);
+                 apiRTC.addEventListener("desktopCapture", desktopCaptureHandler);
                  imClient = apiCC.session.createIMClient();
                  webRTCClient = apiRTC.session.createWebRTCClient({
                            });
@@ -468,7 +489,8 @@
                      $('#contact').html('<i class="fa fa-circle" aria-hidden="true" style ="color : green; font-size:12px;"><em> en ligne</em></i>');
                      $('#video-call').click(function(){
                          $("#hangup").attr("disabled", false).val("Raccrocher");
-                         $("#video-call").unbind('click');
+                         //$("#video-call").unbind('click');
+                         $('#video-call').attr('disabled', true);
                           var  callId = webRTCClient.call(el.innerHTML);
                              if (callId != null) {
                                  addHangupButton(callId);
@@ -478,7 +500,8 @@
                          $('#hangup').attr('disabled', false);
                      });
                       $('#audio-call').click(function(){
-                              $('#audio-call').unbind('click');
+                             // $('#audio-call').unbind('click');
+                          $('#audio-call').attr('disabled', true);
                               var callId = webRTCClient.callAudio(id);
                               if (callId != null) {
                                  addHangupButton(callId);
@@ -488,6 +511,15 @@
                               $('#audio').css({'display' : 'block'});
                               ion.sound.play('skype');
                          });
+                      $("#screenSharing").click(function () {
+                          $('#screenSharing').attr('disabled', true);
+                          $('#menu').show('explode');
+                          $("#hangup").attr("disabled", false);
+                          var callId = webRTCClient.shareScreen(el.innerHTML);
+                          if (callId != null) {
+                              addHangupButton(callId);
+                          }
+                      });
                  });
                //Multi calls Activation
                 webRTCClient.setAllowMultipleCalls(true);
@@ -496,15 +528,17 @@
             //Accept-Refuse
                 webRTCClient.setUserAcceptOnIncomingCall(true);
 
+            //ScreenSharing Activation
+                webRTCClient.activateScreenSharing();
                 $("#hangup").click(function () {
                     webRTCClient.hangUp();
                     ion.sound.stop("iphone"); 
                     $('#menu').css({'display' : 'none'});
+                    $('#timer').timer('remove');
                      $('#audio').css({'display': 'none'});
                     ion.sound.stop("skype");
                 });
                 $("#accept").click(function () {
-                    alert(callType);
                     $("#accept").attr("disabled", true).val("Accepter");
                     $("#refuse").attr("disabled", true).val("Refuser");
                     $("#hangup").attr("disabled", false).val("Raccrocher");
@@ -530,6 +564,7 @@
                      $('#menu').css({'display' : 'none'});
                      $('#audio').css({'display': 'none'});
                      sendIMMessage(callerId, '$Ack_Accept');
+                     $('#audio-call').attr('disabled', false);
                 });
              }
              apiRTC.init({
@@ -554,6 +589,14 @@
                    });
                  $('textarea').click(function(){
                      $('#chat-icon').hide('hightlight');
+                 })
+                 $('#chat-messages').mouseenter( function(){
+                     $('.textLeft').show('Scale');
+                     $('.textRight').show('Scale');
+                 })
+                 $('#chat-messages').mouseleave( function(){
+                     $('.textLeft').hide('Scale');
+                     $('.textRight').hide('Scale');
                  })
              });
                </script>
