--- a/views/plugin-front.html
+++ b/views/plugin-front.html
@@ -55,11 +55,11 @@
                color: white;
             
            }
-           /*
-           .icon{
+           
+           .icons{
                width : 35px; height : 35px; border-radius : 35px;
            }
-           */
+           
             .input-box
             {
                 background-color: white;
@@ -166,6 +166,11 @@
  width: 400px !important;
  height:400px !important;
 }
+                       #audio {
+-moz-box-shadow: 0 0 5px 5px #888;
+-webkit-box-shadow: 0 0 5px 5px#888;
+box-shadow: 0 0 5px 5px #888;
+}
     </style>
        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
      <script src="//cloud.apizee.com/libs/jquery-1.9.0.min.js"></script>
@@ -180,11 +185,20 @@
     <body >
         <div class="container row" id="chatbox" ng-controller = "loginCtrl" style=" vertical-align: top;">   
             <div class="col-md-9">
-                <div id="menu" style="display : none;">
-                   <input id="hangup" class="btn btn-danger" type="button" disabled="true" value="Raccrocher" />
+                 
+                <div id="menu" style="display : none; margin-left : 130px;">
+                    <button class="btn btn-danger" id="hangup" style="width : 50px; height : 50px; border-radius : 50px;">
+                        <span class="fa fa-phone" aria-hidden="true" style="font-size : 15px;"></span>
+                    </button>
                     <!--Accept-Refuse-->
-                    <input id="accept" class="btn btn-success" type="button" disabled="true" value="Accepter" />
-                    <input id="refuse" class="btn btn-warning" type="button" disabled="true" value="Refuser" />
+                    <button class="btn btn-success" id="accept" style="width : 50px; height : 50px; border-radius : 50px;" disabled="true">
+                        <span class="fa fa-phone" aria-hidden="true" style="font-size : 15px;"></span>
+                    </button>
+                    <!--
+                    <button class="btn btn-warning" id="refuse" style="width : 35px; height : 35px; border-radius : 35px;" disabled="true"> 
+                        <span class="fa fa-phone" aria-hidden="true"></span>
+                    </button>
+                  -->
                 </div>
                 <div id="menuScreenSharing" style="display : none;">
                   <input  id="hangupScreenSharing" class="btn btn-danger" value="Arrêter le partage" />
@@ -421,16 +435,20 @@
                 incomingCallId = e.detail.callId;
                  callerId = e.detail.callerId;
                  if(e.detail.callType == 'media'){
-                    $("#hangup").attr("disabled", true).val("Raccrocher");
+                    $("#hangup").attr("disabled", true);
                     $('#menu').show('explode');
-                    $("#accept").attr("disabled", false).val("Accepter");
-                    $("#refuse").attr("disabled", false).val("Refuser");
+                    $("#accept").attr("disabled", false);
+                    $("#refuse").attr("disabled", false);
                        ion.sound.play("iphone");
                  }
                  if(e.detail.callType == 'audio'){
                      callType = e.detail.callType;
+                      $("#hangup").attr("disabled", true);
+                    $('#menu').show('explode');
+                    $("#accept").attr("disabled", false);
+                    $("#refuse").attr("disabled", false);
+                       ion.sound.play("iphone");
                      $('#audio').css({'display': 'block'});
-                     $('#hangup-audio').css({'display': 'none'});
                  }
                  
                   if(e.detail.callType == 'screenSharing'){
@@ -503,7 +521,7 @@
                       $('#audio-call').click(function(){
                              // $('#audio-call').unbind('click');
                           $('#audio-call').attr('disabled', true);
-                              var callId = webRTCClient.callAudio(id);
+                              var callId = webRTCClient.callAudio(el.innerHTML);
                               if (callId != null) {
                                  addHangupButton(callId);
                              }
