--- a/views/plugin-front.html
+++ b/views/plugin-front.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="connexion">
    <head>
+       <title>WebRTC Atos | Front</title>
       <meta charset="utf-8">
        <title></title>
        <style>
